Kubeasz/ingress-nginx/example/04/myapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: learn-ingress
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
  sessionAffinity: None
