Kubeasz/ingress-nginx/example/04/myapp-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: learn-ingress
spec:
  tls:
  - hosts:
    - myapp.linux.io
    secretName: ca-secret
  rules:
  - host: myapp.linux.io
    http:
      paths:
      - backend:
          service:
            name: myapp-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
